# PPM_Photo_Editor

./: .clang-format  .gitignore  CMakeLists.txt  README.md  main.cpp
.github/workflows/: cmake-multi-platform.yml
inc/: EdgeDetection.hpp  Edge_Detection.hpp  Filter.hpp  GaussianBlur.hpp  Gaussian_Blur.hpp  Gray_Scale_image.hpp  Image.hpp  Matrix.hpp  Pixel.hpp  RGB_image.hpp
src/: EdgeDetection.cpp  GaussianBlur.cpp  Gray_Scale_image.cpp  Image.cpp  Pixel.cpp  RGB_image.cpp
test/: CMakeLists.txt  EdgeDetection_Test.cpp  GaussianBlur_Test.cpp  Image_Test.cpp  Matrix_Test.cpp  RGB_Image_Test.cpp  run_all_test.cpp
test_asset/: sunflower_gray_scale.pgm  test.ppm  test_GS.pgm  test_saved.ppm
